# rusty-irrigation-system

./: .gitignore  Cargo.toml  README.md  cargo.yaml  cross.toml  example_config.yaml
.github/workflows/: CD.yml  CI.yml  ci.yml
src/: lib.rs  main.rs
src/config/: mod.rs
src/gpio_controller/: mod.rs  platform_trait.rs  send_command_trait.rs  task.rs
src/valve_controller/: mod.rs  valve_controller.rs  valve_trait.rs
src/valves/: mod.rs
src/valves/mock_valve/: mock_valve.rs  mod.rs
src/valves/rasberrypie/: mod.rs  pie_valve.rs
src/watering_clock/: mod.rs  watering_clock.rs
src/web_server/: mod.rs
src/web_server/backend/: mod.rs
src/web_server/backend/valve/: mod.rs
src/web_server/frontend/: package-lock.json  package.json
src/web_server/frontend/public/: index.html
src/web_server/frontend/src/: index.tsx
src/web_server/frontend/src/components/: App.tsx
src/web_server/valve/: mod.rs
tests/helpers/: invalid_config.yaml
