[package]
name = "rusty_irrigation_system"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rppal = "0.13.1"
tokio = { version = "1", features = ["rt", "time", "macros", "sync"] }
chrono = { version = "0.4"}
tracing = {version = "0.1", features = ["log", "std"]}
tracing-subscriber = { version = "0.3", features = ["fmt"]}
futures = { version = "0.3"}

[dev-dependencies]
tokio = { version = "1", features = ["full"] }